--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ php-fpm:
     - ./log/php-fpm/:/var/log/php-fpm/:rw
   links:
     - mysql:mysql
-
+    - redis:redis
 
 php56-fpm:
   build: .
@@ -47,3 +47,11 @@ mysql:
     - ./log/mysql/:/var/log/mysql/:rw
   environment:
     MYSQL_ROOT_PASSWORD: "123456"
+redis:
+  image: redis:3.2.10
+  ports:
+    - "6379:6379"
+  volumes:
+    - ./redis/data:/data
+    - ./conf/redis/redis.conf:/usr/local/etc/redis/redis.conf
+    - ./log/redis/:/var/log/redis/:rw
